modified:   app/build.gradle 	modified:   app/src/main/AndroidManifest.xml 	modified:   app/src/main/java/com/example/wkg/part_timejob/Constants.java 	modified:   app/src/main/java/com/example/wkg/part_timejob/Fragment_Conversation.java 	modified:   app/src/main/java/com/example/wkg/part_timejob/Fragment_register.java 	modified:   app/src/main/java/com/example/wkg/part_timejob/ListAdapter.java 	new file:   app/src/main/java/com/example/wkg/part_timejob/application.java 	new file:   app/src/main/java/com/example/wkg/part_timejob/conversationShow_rv_adpter.java 	modified:   app/src/main/java/com/example/wkg/part_timejob/conversation_rv_adapter.java 	new file:   app/src/main/res/layout/rv_conversation_receiverimage_layout.xml 	new file:   app/src/main/res/layout/rv_conversation_receivertext_layout.xml 	new file:   app/src/main/res/layout/rv_conversation_senderimage_layout.xml 	new file:   app/src/main/res/layout/rv_conversation_sendertext_layout.xml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,12 +12,12 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
             //选择要添加的对应cpu类型的.so库。
-            abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a'
+            abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a','x86'
             // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
         }
         manifestPlaceholders = [
                 JPUSH_PKGNAME : applicationId,
-                JPUSH_APPKEY : "你的appkey", //JPush上注册的包名对应的appkey.
+                JPUSH_APPKEY : "b7a8911ab116a4e80b6f9bba", //JPush上注册的包名对应的appkey.
                 JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
         ]
     }
