--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,18 @@ dependencies {
     compile 'com.ashokvarma.android:bottom-navigation-bar:1.4.3'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
-    compile 'cn.jiguang.sdk:jmessage:2.2.0'  // 此处以JMessage 2.2.0 版本为例。
-    compile 'cn.jiguang.sdk:jcore:1.1.3'  // 此处以JCore 1.1.3 版本为例。
-    compile project( ':library')
+    compile 'cn.jiguang.sdk:jmessage:2.2.0'
+    // 此处以JMessage 2.2.0 版本为例。
+    compile 'cn.jiguang.sdk:jcore:1.1.3'
+    // 此处以JCore 1.1.3 版本为例。
+    /*
+        create by wkg 2017年6月30日
+         */
+    compile 'com.youth.banner:banner:1.4.9'
+    //最新版本
+    /*
+            ends add by wkg 2017年6月30日
+         */
+    compile project(':library')
+    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
 }
