new file:   app/BaiduLBS_Android.jar 	modified:   app/build.gradle 	modified:   app/src/main/AndroidManifest.xml 	modified:   app/src/main/java/com/example/wkg/part_timejob/Constants.java 	modified:   app/src/main/java/com/example/wkg/part_timejob/Fragment_main/Fragment_main.java 	new file:   app/src/main/java/com/example/wkg/part_timejob/Job.java 	new file:   app/src/main/libs/BaiduLBS_Android.jar 	new file:   app/src/main/libs/arm64-v8a/libBaiduMapSDK_base_v4_3_1.so 	new file:   app/src/main/libs/arm64-v8a/libBaiduMapSDK_map_v4_3_1.so 	new file:   app/src/main/libs/arm64-v8a/liblocSDK7a.so 	new file:   app/src/main/libs/armeabi-v7a/libBaiduMapSDK_base_v4_3_1.so 	new file:   app/src/main/libs/armeabi-v7a/libBaiduMapSDK_map_v4_3_1.so 	new file:   app/src/main/libs/armeabi-v7a/liblocSDK7a.so 	new file:   app/src/main/libs/armeabi/libBaiduMapSDK_base_v4_3_1.so 	new file:   app/src/main/libs/armeabi/libBaiduMapSDK_map_v4_3_1.so 	new file:   app/src/main/libs/armeabi/liblocSDK7a.so 	new file:   app/src/main/libs/x86/libBaiduMapSDK_base_v4_3_1.so 	new file:   app/src/main/libs/x86/libBaiduMapSDK_map_v4_3_1.so 	new file:   app/src/main/libs/x86/liblocSDK7a.so 	new file:   app/src/main/libs/x86_64/libBaiduMapSDK_base_v4_3_1.so 	new file:   app/src/main/libs/x86_64/libBaiduMapSDK_map_v4_3_1.so 	new file:   app/src/main/libs/x86_64/liblocSDK7a.so 	modified:   app/src/main/res/layout/fragment_main.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,10 @@
         android:supportsRtl="true"
         tools:replace="label"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="b2ddeed275558a155c5186123eca45cd"
+            />
         <!--android:theme="@style/AppTheme" -->
         <service android:name="cn.jpush.android.service.PushService"
             android:process=":multiprocess"
