--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.squareup.retrofit2:retrofit:2.0.0'
     compile 'cn.jiguang.sdk:jmessage:2.2.0'
+    compile 'com.amap.api:3dmap:5.0.0'
+    compile 'com.amap.api:search:5.0.0'
+    compile 'com.amap.api:location:3.3.0'
     // 此处以JMessage 2.2.0 版本为例。
     compile 'cn.jiguang.sdk:jcore:1.1.3'
     // 此处以JCore 1.1.3 版本为例。
